fixed spacings 1024px devices

--- a/css/style.scss
+++ b/css/style.scss
@@ -423,8 +423,8 @@ span {
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 60vh;
-            padding: 0 4em;
+            height: auto;
+            padding: 4em;
 
             .testimonial-container {
                 text-align: center;
@@ -438,8 +438,12 @@ span {
             }
 
             .carousel-container {
-                width: 90%;
-                height: 50%;
+                width: 85%;
+                height: 100%;
+
+                ul {
+                    height: 350px;
+                }
             }
         }
 
